@@ -1,3 +1,7 @@
+2006-05-27  Yen-Ju Chen <yjchenx at gmail>
+
+    * Update to Io darcs 20060527 (Only ObjcBridge).
+
 2006-05-26  Yen-Ju Chen <yjchenx at gmail>
 
     * Update to Io darcs 20060526.
